# tokenizer-grpc

./: .gitignore  CMakeLists.txt  README.md  cuda_utils.h  gen_python_protobufs.sh  openai_server.py  requirements.txt  send_openai_request.py  token_compute_server.py  tokenizer.proto  tokenizer_pb2.py  tokenizer_pb2.pyi  tokenizer_pb2_grpc.py  tokenizer_server.cc  tokenizer_test.py
cuda/: CMakeLists.txt  cuda_test.cc  cuda_tests.cc  cuda_tests.h
