#
# TODO(kreeger): Rebuild this and make it optional after an interface is ready.
#

# project(TokenizerServer C CXX CUDA)
# set_source_files_properties(cuda_tests.h PROPERTIES LANGUAGE CUDA)
# set_source_files_properties(cuda_tests.cc PROPERTIES LANGUAGE CUDA)
# add_library(cuda_tests
#     "cuda_tests.cc"
# )
# add_executable(cuda_test cuda_test.cc)
# set_source_files_properties(cuda_test.cc PROPERTIES LANGUAGE CUDA)

